kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: store-app
  labels:
    name: store-app
    environment: production
    app: retail-store
