kubernetes/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: store-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: roshanx/store-app-cart:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: store-app
spec:
  selector:
    app: cart
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
