kubernetes/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: store-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: roshanx/store-app-catalog:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: store-app
spec:
  selector:
    app: catalog
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8080
