kubernetes/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: store-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
      - name: checkout
        image: roshanx/store-app-checkout:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: store-app
spec:
  selector:
    app: checkout
  ports:
  - protocol: TCP
    port: 8084
    targetPort: 8080
