kubernetes/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: store-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: roshanx/store-app-orders:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: store-app
spec:
  selector:
    app: orders
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8080
