kubernetes/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: store-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: roshanx/store-app-ui:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: store-app
spec:
  selector:
    app: ui
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 31000   
  type: NodePort
